corrigindo a versão removendo o SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>mtfn</groupId>
 	<artifactId>mtfn</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<packaging>jar</packaging>
 	<name>mtfn</name>
 	<url>http://maven.apache.org</url>
